syntax = "proto3";

import "pb/duck/mongodb/TimeStamp.proto";
import "pb/duck/mongodb/ObjectID.proto";
import "pb/empty.proto";

message DocBetLog {
    ObjectID  ID         = 1;  // @gotags:bson:"_id"
    int64     Pid        = 2;  // 内部玩家ID
    string    UserID     = 3;  // 外部玩家ID
    string    GameID     = 4;  // 游戏ID
    string    RoundID    = 5;  // 对局ID，方便查询
    int64     Bet        = 6;  // 下注
    int64     Win        = 7;  // 输赢
    string    Comment    = 8;  // 注释
    TimeStamp InsertTime = 9;  // 数据插入时间
    string    AppID      = 10; //
    int64     Balance    = 11; // 余额
}

message DocBetLogList {
    repeated DocBetLog List = 1;
}

message GetLogReq {
    TimeStamp From = 1;
}

message LoginReq {
    string UserID   = 1; // 玩家id
    string GameID   = 2; // 游戏ID
    string Language = 3; // 游戏语言
}

message LoginResp {
    string Url = 1; // 游戏启动链接
}

enum GameType {
    Slot  = 0; // 拉霸游戏
    Fish  = 1; // 捕鱼游戏
    Poker = 3; // 棋牌游戏
}
enum GameStatus {
    Open        = 0; // 正常
    Maintenance = 1; // 维护中（列表中出现）
    Hide        = 2; // 隐藏（列表中不出现）
}

message Game {
    string     ID     = 1; //@gotags:bson:"_id"
    string     Name   = 2;
    GameType   Type   = 3;
    GameStatus Status = 4;
}

message GameListResp {
    repeated Game List = 1;
}

message ModifyGoldUidReq {
    string UserID  = 1; // 玩家ID
    int64  Change  = 2; // 金币变化：>0 加钱， <0 扣钱
    string Comment = 3; // 注释
}

message GetBalanceUidReq {
    string UserID = 1;
}

message GetBalanceUidResp {
    int64 Balance = 1;
}

// 给接入者调用
service ForCustomerRpc {
    // 获取游戏列表
    rpc GameList(Empty) returns (GameListResp);
    // 获取游戏启链接
    rpc Login(LoginReq) returns (LoginResp);
    // 获取下注记录
    // 每次传开始时间到服务器查询，
    // 从返回结果中存储最大的数据产生时间为下一次的起始时间
    rpc GetLog(GetLogReq) returns (DocBetLogList);
}

// 接入者提供
service CustomerOfferedRpc {
    // 修改单个玩家金币
    rpc ModifyGold(ModifyGoldUidReq) returns (GetBalanceUidResp);
    // 获取单个玩家余额
    rpc GetBalance(GetBalanceUidReq) returns (GetBalanceUidResp);
}
